--- a/hackerpp/style.css
+++ b/hackerpp/style.css
@@ -62,7 +62,7 @@ body{
     border-radius: 10px;
     font-size: 50px;
     height: 100px;
-    color: aquamarine;
+    color: green;
     width: 100px;
     transition: 0.3s;
 }
